RANGER-5799: Validate class assignability before instantiating configured service-def classes (#1237)